--- a/src/main/resources/pt_br.yml
+++ b/src/main/resources/pt_br.yml
@@ -42,4 +42,17 @@ cabraDesc: Encare seu destino por queda 100x
 voidNome: Andarilho do Vazio
 voidDesc: Encare o seu destino no vazio 100x
 vultoTicks: 480000;
+t0: Cowboy
+t1: Abençoado pelo Nether
+t2: Andarilho do Vazio
+t3: Aquimista
+t4: Francoatirador
+t5: Cabra Macho
+t6: Shamã
+t7: Abençoado pelo Oceano
+t8: Maníaco
+t9: Líder da Matilha
+t10: Vulto Encarnado
+t11: Guerreiro
+
 
